Subiendo temple album completo

--- a/week2/temples.html
+++ b/week2/temples.html
@@ -23,7 +23,7 @@
   </header>
 
   <main>
-    <h1>Temples Around the World<figure>
+    <h1>Temples Around the World</h1>figure>
   <img src="styles/images/asuncion paraguay temple.jpeg" alt="
   asuncion Paraguay">
   <figcaption>Asumcion Paraguay</figcaption>
