Agregar temples.html a la raíz del repositorio

--- a/temples.html
+++ b/temples.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Temple Album</title>
-  <link rel="stylesheet" href="styles/temples.css" />
-  <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 640px)" />
-  <script src="scripts/temples.js" defer></script>
+  <link rel="stylesheet" href="week2/styles/temples.css" />
+  <link rel="stylesheet" href="week2/styles/temples-large.css" media="screen and (min-width: 640px)" />
+  <script src="week2/scripts/temples.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -23,41 +23,41 @@
   </header>
 
   <main>
-    <h1>Temples Around the World</h1>figure>
-  <img src="styles/images/asuncion paraguay temple.jpeg" alt="
+    <h1>Temples Around the World</h1>
+  <img src="week2/styles/images/asuncion paraguay temple.jpeg" alt="
   asuncion Paraguay">
-  <figcaption>Asumcion Paraguay</figcaption>
+  <figcaption>Asuncion Paraguay</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/buenos aires temple .jpg" alt="Buenos Aires">
+  <img src="week2/styles/images/buenos aires temple .jpg" alt="Buenos Aires">
   <figcaption>Buenos Aires</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/cordoba argentina temple.jpg" alt="Cordoba Argentina">
+  <img src="week2/styles/images/cordoba argentina temple.jpg" alt="Cordoba Argentina">
   <figcaption>Cordoba Argentina</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/oakland temple.jpg" alt="Oakland">
+  <img src="week2/styles/images/oakland temple.jpg" alt="Oakland">
   <figcaption>Oakland</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/rome temple.webp" alt="Rome Italy">
+  <img src="week2/styles/images/rome temple.webp" alt="Rome Italy">
   <figcaption>Rome Italy</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/salt lake temple night.jpeg" alt="Salt Lake">
+  <img src="week2/styles/images/salt lake temple night.jpeg" alt="Salt Lake">
   <figcaption>Salt Lake</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/santiago chile temple.jpg" alt="Santiago Chile">
+  <img src="week2/styles/images/santiago chile temple.jpg" alt="Santiago Chile">
   <figcaption>Santiago Chile</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/Templo de São Paulo da Igreja de Jesus Cristo dos Santos dos Últimos Dias.jpg" alt="Sao Paulo">
+  <img src="week2/styles/images/Templo de São Paulo da Igreja de Jesus Cristo dos Santos dos Últimos Dias.jpg" alt="Sao Paulo">
   <figcaption>Sao Paulo</figcaption>
 </figure>
 <figure>
-  <img src="styles/images/salt lake temple.jpg" alt="Temple 9">
+  <img src="week2/styles/images/salt lake temple.jpg" alt="Temple 9">
   <figcaption>Salt Lake</figcaption>
 </figure>
 
