--- a/temples.html
+++ b/temples.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Temple Album</title>
   <link rel="stylesheet" href="week2/styles/temples.css" />
@@ -24,40 +24,41 @@
 
   <main>
     <h1>Temples Around the World</h1>
-  <img src="week2/styles/images/asuncion paraguay temple.jpeg" alt="
+<figure>  
+  <img src="week2/styles/images/asuncion_paraguay_temple.jpeg" alt="
   asuncion Paraguay">
   <figcaption>Asuncion Paraguay</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/buenos aires temple .jpg" alt="Buenos Aires">
+  <img src="week2/styles/images/buenosAires_temple.jpg" alt="Buenos Aires">
   <figcaption>Buenos Aires</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/cordoba argentina temple.jpg" alt="Cordoba Argentina">
+  <img src="week2/styles/images/cordoba.jpg" alt="Cordoba Argentina">
   <figcaption>Cordoba Argentina</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/oakland temple.jpg" alt="Oakland">
+  <img src="week2/styles/images/oakland_temple.jpg" alt="Oakland">
   <figcaption>Oakland</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/rome temple.webp" alt="Rome Italy">
+  <img src="week2/styles/images/rome_temple.webp" alt="Rome Italy">
   <figcaption>Rome Italy</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/salt lake temple night.jpeg" alt="Salt Lake">
+  <img src="week2/styles/images/salt_lake_temple.jpg" alt="Salt Lake">
   <figcaption>Salt Lake</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/santiago chile temple.jpg" alt="Santiago Chile">
+  <img src="week2/styles/images/santiago_chile_temple.jpg" alt="Santiago Chile">
   <figcaption>Santiago Chile</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/Templo de São Paulo da Igreja de Jesus Cristo dos Santos dos Últimos Dias.jpg" alt="Sao Paulo">
+  <img src="week2/styles/images/SãoPaulo_temple.jpg" alt="Sao Paulo">
   <figcaption>Sao Paulo</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/salt lake temple.jpg" alt="Temple 9">
+  <img src="week2/styles/images/saltLake_temple_night.jpeg" alt="Temple 9">
   <figcaption>Salt Lake</figcaption>
 </figure>
 
