correcting sao paulo

--- a/temples.html
+++ b/temples.html
@@ -54,7 +54,7 @@
   <figcaption>Santiago Chile</figcaption>
 </figure>
 <figure>
-  <img src="week2/styles/images/SãoPaulo_temple.jpg" alt="Sao Paulo">
+  <img src="week2/styles/images/SaoPaulo_temple.jpg" alt="Sao Paulo">
   <figcaption>Sao Paulo</figcaption>
 </figure>
 <figure>
