--- a/week2/filtered-temples.html
+++ b/week2/filtered-temples.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Temple Album</title>
-  <link rel="stylesheet" href="week2/styles/filtered-temples.css" />
-  <link rel="stylesheet" href="week2/styles/temples-large.css" media="screen and (min-width: 640px)" />
-  <script src="week2/scripts/filtered-temples.js" defer></script>
+  <link rel="stylesheet" href="styles/filtered-temples.css" />
+  <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 640px)" />
+  <script src="scripts/filtered-temples.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
 <body>
