--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Temple Album</title>
-  <link rel="stylesheet" href="styles/filtered-temples.css" />
-  <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 640px)" />
-  <script src="scripts/filtered-temples.js" defer></script>
+  <link rel="stylesheet" href="week2/styles/filtered-temples.css" />
+  <script src="week2/scripts/filtered-temples.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <h1>Temple Album</h1>
-    <button id="menu" aria-label="Toggle menu">☰</button>
-    <nav id="nav-menu" class="nav" aria-label="Primary">
+    <button id="menu">☰</button>
+    <nav id="nav-menu" class="nav">
       <button id="home">Home</button>
       <button id="old">Old</button>
       <button id="new">New</button>
@@ -24,7 +23,7 @@
 
   <main id="temples-container">
     <h1>Temples Around the World</h1>
-    <div id="temples" class="gallery" aria-live="polite"></div>
+    <div id="temples" class="gallery"></div>
   </main>
 
   <footer>
